--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongoose": "^5.12.2"
+    "js2xmlparser": "^4.0.1",
+    "jstoxml": "^2.0.3",
+    "mongoose": "^5.12.2",
+    "qs": "^6.10.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "mocha": "^8.3.2"
