--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "mocha": "^8.3.2"
+    "eslint": "^7.23.0",
+    "mocha": "^8.3.2",
+    "standard": "^16.0.3"
   }
 }
